--- a/styles/lookmeeting.css
+++ b/styles/lookmeeting.css
@@ -30,24 +30,6 @@
 	background-color:#888;
 }
 
-#look table tr.chColor2{
-	background-color:#DDD;
-}
-#look table tr.chColor4{
-	background-color:#DDD;
-}
-#look table tr.chColor6{
-	background-color:#DDD;
-}
-#look table tr.chColor8{
-	background-color:#DDD;
-}
-#look table tr.chColor10{
-	background-color:#DDD;
-}
-#look table tr.chColor12{
-	background-color:#DDD;
-}
-#look table tr.chColor14{
+#look table tr.chColorB{
 	background-color:#DDD;
 }
